tests/purs/failing/QualifierApostropheEnd.purs
-- @shouldFailWith ErrorParsingModule
module QualifierEndsWithPrime'.OkModuleName where

import Effect.Console (log)

main = log "Done"
